--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <p></p>
             <div class="social-links">
 
-                <a href="https://www.linkedin.com/in/ayşegül-köse-a08795218" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/aysegulkose" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
             <div class="copyright">
                 &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
